--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ defaults:
       sidebar:
         nav: "Tutorial"
       mathjax: true
-      : true
+      toc: true
       _sticky: true  
    # _Examples: for Examples documents
   - scope:
@@ -116,7 +116,7 @@ defaults:
       sidebar:
         nav: "Examples"
       mathjax: true
-      : true
+      toc: true
       _sticky: true  
   # _Background: for Background documents
   - scope:
@@ -130,7 +130,7 @@ defaults:
       sidebar:
         nav: "Theory"
       mathjax: true
-      : true
+      toc: true
       _sticky: true    
   # _HiOSD: for HiSD documents
   - scope:
@@ -144,7 +144,7 @@ defaults:
       sidebar:
         nav: "Theory"
       mathjax: true
-      : true
+      toc: true
       _sticky: true
   # _GHiSD: for GHiSD documents
   - scope:
@@ -158,7 +158,7 @@ defaults:
       sidebar:
         nav: "Theory"
       mathjax: true
-      : true
+      toc: true
       _sticky: true
   # _AHiSD: for AHiSD documents
   - scope:
@@ -172,7 +172,7 @@ defaults:
       sidebar:
         nav: "Theory"
       mathjax: true
-      : true
+      toc: true
       _sticky: true
 
 
