--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,9 @@ kramdown:
   highlighter: rouge
   # syntax_highlighter: rouge // new version, github pages need the old one
 permalink   : date
-
+toc:
+  max_level: 3
+  
 #comments:
 # provider: "disqus"
 # disqus:
