--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -51,7 +51,7 @@ docs:
         url: /AHiSD/AHiSD_English
 
   - title: "Contact us"
-    url: /Contact us/Contact us_English
+    url: /Contact/Contact_English
 
 
 
@@ -95,7 +95,7 @@ docs_Chinese:
         url: /AHiSD/AHiSD_Chinese
 
   - title: "联系我们"
-    url: /Contact us/Contact us_Chinese
+    url: /Contact/Contact_Chinese
 
 
         
@@ -106,15 +106,15 @@ Tutorial:
     url: /Tutorial/Tutorial_overview
     children:
       - title: "Installation & Import"
-        url: /Tutorial/Installation & Import
+        url: /Tutorial/Installation&Import
       - title: "Configuration Parameters"
-        url: /Tutorial/Configuration Parameters
+        url: /Tutorial/ConfigurationParameters
       - title: "Execution Interface"
-        url: /Tutorial/Execution Interface
+        url: /Tutorial/ExecutionInterface
       - title: "Output Objects"
-        url: /Tutorial/Output Objects
+        url: /Tutorial/OutputObjects
       - title: "Package Requirements"
-        url: /Tutorial/Package Requirements        
+        url: /Tutorial/PackageRequirements        
 
 
         
@@ -125,15 +125,15 @@ Tutorial_Chinese:
     url: /Tutorial/Tutorial_overview_Chinese
     children:
       - title: "安装与导入"
-        url: /Tutorial/Installation & Import_Chinese
+        url: /Tutorial/Installation&Import_Chinese
       - title: "配置参数"
-        url: /Tutorial/Configuration Parameters_Chinese
+        url: /Tutorial/ConfigurationParameters_Chinese
       - title: "执行接口"
-        url: /Tutorial/Execution Interface_Chinese
+        url: /Tutorial/ExecutionInterface_Chinese
       - title: "输出对象"
-        url: /Tutorial/Output Objects_Chinese
+        url: /Tutorial/OutputObjects_Chinese
       - title: "依赖包"
-        url: /Tutorial/Package Requirements_Chinese      
+        url: /Tutorial/PackageRequirements_Chinese      
 
 
         
@@ -206,12 +206,12 @@ Theory_Chinese:
 
 
         
-Contact us:
+Contact:
   - title: "Back to main"
     url: /index
 
 
 
-Contact us_Chinese:
+Contact_Chinese:
   - title: "回到首页"
     url: /index_Chinese
