--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,15 +16,15 @@ docs:
     url: /Tutorial/Tutorial_overview
     children:
       - title: "Installation & Import"
-        url: /Tutorial/Installation & Import
+        url: /Tutorial/Installation&Import
       - title: "Configuration Parameters"
-        url: /Tutorial/Configuration Parameters
+        url: /Tutorial/ConfigurationParameters
       - title: "Execution Interface"
-        url: /Tutorial/Execution Interface
+        url: /Tutorial/ExecutionInterface
       - title: "Output Objects"
-        url: /Tutorial/Output Objects
+        url: /Tutorial/OutputObjects
       - title: "Package Requirements"
-        url: /Tutorial/Package Requirements   
+        url: /Tutorial/PackageRequirements   
         
   - title: "Examples"
     url: /Examples/Examples_overview
@@ -60,15 +60,15 @@ docs_Chinese:
     url: /Tutorial/Tutorial_overview_Chinese
     children:
       - title: "安装与导入"
-        url: /Tutorial/Installation & Import_Chinese
+        url: /Tutorial/Installation&Import_Chinese
       - title: "配置参数"
-        url: /Tutorial/Configuration Parameters_Chinese
+        url: /Tutorial/ConfigurationParameters_Chinese
       - title: "执行接口"
-        url: /Tutorial/Execution Interface_Chinese
+        url: /Tutorial/ExecutionInterface_Chinese
       - title: "输出对象"
-        url: /Tutorial/Output Objects_Chinese
+        url: /Tutorial/OutputObjects_Chinese
       - title: "依赖包"
-        url: /Tutorial/Package Requirements_Chinese   
+        url: /Tutorial/PackageRequirements_Chinese   
         
   - title: "示例"
     url: /Examples/Examples_overview
